--- a/recipe/nandini_adhyapaka_lentil_stew.html
+++ b/recipe/nandini_adhyapaka_lentil_stew.html
@@ -3,28 +3,43 @@
 
 <html>
   <head>
-    <meta charset="utf-8">
-    <title></title>
+    <title>Nandini's Recipes</title>
+    <meta charset="utf-8" name="description" content="A very tasty low cal recipe for the health-conscious!">
+    <link rel="stylesheet" href="/Users/nandini/app_academy/course_work/g_pages/recipe/css_custom_reset.css" type="text/css">
+    <link rel="stylesheet" href="/Users/nandini/app_academy/course_work/g_pages/recipe/custom_grid.css" type="text/css">
+    <script type="text/javascript" src="/Users/nandini/app_academy/course_work/g_pages/recipe/external_javascript_example.js"></script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-12345678-9', 'auto');
+      ga('send', 'pageview');
+
+    </script>
   </head>
   <body>
-      <header>
+      <header class="cf">
         <img src=https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Appacademylogo.png/175px-Appacademylogo.png alt="App Academy Logo">
-        <h2>Lentil Bean Stew</h2>
         <nav>
-          <ul>
+          <!-- <ul>
             <li><a href="#ingredients">Ingredients</a></li>
             <li><a href="#method">Method</a></li>
-          </ul>
+          </ul> -->
+          <ul class="hamburger-dropdown">
+            <li>
+              <ul>
+                <li><a href="#ingredients">Ingredients</a></li>
+                <li><a href="#method">Method</a></li>
+              </ul>
+            </li>
+         </ul>
         </nav>
       </header>
 
-      <figure>
-        <img src="/Users/nandini/app_academy/course_work/homeworks/w4d1/html_hw/IMG_2391.jpg"
-             alt="Lentil Bean Stew">
-        <figcaption>Lentil Bean Stew <a href=https://en.wikipedia.org/wiki/Stew>Wiki</a><figcaption>
-      </figure>
 
-      <aside>
+      <aside class="col col-1-3">
         <h2 id="ingredients">Ingredients</h2>
         <ul>
             <li>Green lentils - 3/4 cup</li>
@@ -47,11 +62,18 @@
             <li>Paprika - to taste</li></ul>
           <a name="Ingredients" />
 
-          <a href="#Ingredients">Back to top</a>
+          <a href="#Ingredients">Back to top</a><br><br>
       </aside>
 
-      <section>
-        <h2 id="method">Method</h2>
+      <section class="col col-2-3">
+        <h1>Lentil Bean Stew</h1><br>
+        <figure>
+          <img src="/Users/nandini/app_academy/course_work/g_pages/recipe/IMG_2391.jpg"
+          alt="Lentil Bean Stew">
+          <figcaption>Lentil Bean Stew <a href=https://en.wikipedia.org/wiki/Stew>Wiki</a><figcaption>
+        </figure><br>
+
+        <h2 id="method">Method</h2><br>
         <ol>
             <li>Mix the green lentils with soaked beans, salt, dried thyme, green chillies, bay leaf and the chunk of onion.</li>
             <li>Bring to a boil and simmer for 20-25 minutes. Remove the onion and bay leaf.</li>
@@ -60,9 +82,44 @@
             <li>Now add spinach and lemon juice, simmer till spinach wilts. Serve hot.</li>
       </section>
 
-        <a name="Method" />
-              <!-- Imagine all of your other content in between. By the way, this is how we denote comments in HTML. -->
-        <a href="#Method">Back to top</a>
+        <br>
+
+      <section id="reviews">
+        <form id="review-form" action=https://nandini0407.github.io/html_homework/recipe/nandini_adhyapaka_lentil_stew.html/reviews method="post">
+          <label for="reviewer_name">Name</label>
+          <input type="text" name="Name" id="reviewer_name">
+          <br>
+          <br>
+
+          <input type="radio" name="Rating" value="1" checked>
+          <input type="radio" name="Rating" value="2">
+          <input type="radio" name="Rating" value="3">
+          <input type="radio" name="Rating" value="4">
+          <input type="radio" name="Rating" value="5">
+
+          <br>
+          <br>
+
+          <select name="expertise">
+            <option value="Select Cooking Expertise" disabled="true" selected="true">Select Cooking Expertise</option>
+            <option value="Sometimes cook">Sometimes cook</option>
+            <option value="Cook everyday">Cook everyday</option>
+            <option value="Cooking is a hobby">Cooking is a hobby</option>
+            <option value="Professional chef">Professional chef</option>
+          </select>
+
+          <br>
+          <br>
+
+          <label>Review<br>
+            <textarea name="review" rows="8" cols="40"></textarea>
+          </label>
+
+          <br>
+
+          <input type="submit" value="Submit Review">
+        </form>
+      </section>
 
       <footer>
         <p>Recipe inspired by <a href=http://blog.myfitnesspal.com/lentil-sweet-potato-spinach-stew/>MyFitnessPal</a><p>
