--- a/recipe/nandini_adhyapaka_lentil_stew.html
+++ b/recipe/nandini_adhyapaka_lentil_stew.html
@@ -62,7 +62,9 @@
             <li>Paprika - to taste</li></ul>
           <a name="Ingredients" />
 
-          <a href="#Ingredients">Back to top</a><br><br>
+          <a href="#Ingredients">Back to top</a>
+          <br>
+          <br>
       </aside>
 
       <section class="col col-2-3">
